# python-gudev

./: .gitignore  Makefile.am  NEWS  README  autogen.sh  configure.ac  gudev.defs  gudev.override  gudevmodule.c  test.py
m4/: Makefile.am
